--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:unit && npm run test:e2e && npm run test:int",
-    "test:acc:users":"NODE_ENV=test jest tests/contexts/users/infrastructure/acceptance --runInBand --verbose --forceExit",
+    "test:acc:users": "NODE_ENV=test jest tests/contexts/users/infrastructure/acceptance --runInBand --verbose --forceExit",
     "test:e2e:auth": "NODE_ENV=test jest tests/contexts/auth/e2e --runInBand --verbose --forceExit",
     "test:e2e": "npm run test:e2e:users && npm test:e2e:auth",
     "test:e2e:users": "NODE_ENV=test jest tests/contexts/users/infrastructure --runInBand --verbose --forceExit",
@@ -27,6 +27,7 @@
     "prepare": "cd .. && husky install 4-1-commit-hooks/.husky"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "convict": "^6.2.4",
