--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "test": "npm run test:unit && npm run test:e2e && npm run test:int",
     "test:acc:users": "NODE_ENV=test jest tests/contexts/users/infrastructure/acceptance --runInBand --verbose --forceExit",
     "test:e2e:auth": "NODE_ENV=test jest tests/contexts/auth/e2e --runInBand --verbose --forceExit",
+    "test:e2e:posts": "NODE_ENV=test jest tests/contexts/posts/e2e --runInBand --verbose --forceExit",
     "test:e2e": "npm run test:e2e:users && npm test:e2e:auth",
     "test:e2e:users": "NODE_ENV=test jest tests/contexts/users/infrastructure --runInBand --verbose --forceExit",
     "test:e2e:coverage": "NODE_ENV=test jest --coverage --testRegex='.e2e.ts$' --coverageDirectory=./coverage_e2e --runInBand --detectOpenHandles",
