--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: blogdb
-      POSTGRES_USER: bloguser
-      POSTGRES_PASSWORD: blogpass
+      POSTGRES_DB: dbName
+      POSTGRES_USER: dbUser
+      POSTGRES_PASSWORD: dbPassword
     volumes:
       - pgdata:/var/lib/postgresql/data
 
