--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "NODE_ENV=dev ts-node-dev --ignore-watch node_modules  ./src/apps/start.ts",
+    "dev": "cross-env NODE_ENV=dev ts-node-dev --ignore-watch node_modules  ./src/apps/start.ts",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:unit && npm run test:e2e && npm run test:int",
@@ -25,7 +25,13 @@
     "build:tsc": "tsc -p tsconfig.prod.json",
     "build:di": "copy 'src/**/*.{json,yaml,html,png}' dist/src",
     "build:clean": "rm -r dist; exit 0",
-    "prepare": "cd .. && husky install 4-1-commit-hooks/.husky"
+    "prepare": "cd .. && husky install 4-1-commit-hooks/.husky",
+    "migration:generate:users": "npx sequelize-cli migration:generate --name create-users --migrations-path ./src/contexts/auth/infrastructure/persistence/sequelize/migrations",
+    "db:create:users": "sequelize-cli db:create --config ./src/contexts/shared/infrastructure/persistence/sequelize/sequelize-cli-config.js",
+    "migrate:users": "sequelize-cli db:migrate --migrations-path ./src/contexts/auth/infrastructure/persistence/sequelize/migrations --config ./src/contexts/shared/infrastructure/persistence/sequelize/sequelize-cli-config.js",
+    "undo:users": "sequelize-cli db:migrate:undo --migrations-path ./src/contexts/auth/infrastructure/persistence/sequelize/migrations --config ./src/contexts/shared/infrastructure/persistence/sequelize/sequelize-cli-config.js",
+    "undo:all:users": "sequelize-cli db:migrate:undo:all --migrations-path ./src/contexts/auth/infrastructure/persistence/sequelize/migrations --config ./src/contexts/shared/infrastructure/persistence/sequelize/sequelize-cli-config.js"
+  
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -36,6 +42,7 @@
     "cookie-parser": "^1.4.5",
     "copy": "^0.3.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "errorhandler": "^1.5.1",
@@ -87,6 +94,7 @@
     "jest": "^27.2.4",
     "lint-staged": "11.2.0",
     "prettier": "^2.4.1",
+    "sequelize-cli": "^6.6.3",
     "socket.io-client": "^4.8.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
