wip( posts): events

--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "test:e2e": "npm run test:e2e:users && npm test:e2e:auth",
     "test:e2e:users": "NODE_ENV=test jest tests/contexts/users/infrastructure --runInBand --verbose --forceExit",
     "test:e2e:coverage": "NODE_ENV=test jest --coverage --testRegex='.e2e.ts$' --coverageDirectory=./coverage_e2e --runInBand --detectOpenHandles",
-    "test:unit": "npm run test:unit:chat",
+    "test:unit": "npm run test:unit:posts",
+    "test:unit:posts":"NODE_ENV=test jest tests/contexts/posts/unit --runInBand --verbose --forceExit",
     "test:unit:users": "NODE_ENV=test jest tests/contexts/users/application --runInBand --verbose --forceExit",
     "test:int": "npm run test:int:users",
     "test:int:users": "NODE_ENV=test jest tests/contexts/users/infrastructure/integration --runInBand --verbose --forceExit",
