--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,20 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "commonjs",                                /* Specify what module code is generated. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-    "strict": true,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true ,                                /* Skip type checking all .d.ts files. */
-    "outDir": "./dist",               // Specify the output directory for compiled files
-    "rootDir": "./src",
-    "types": ["jest"],
+    "target": "es2016",                                 /* Defines the output JavaScript version */
+    "module": "commonjs",                               /* Defines the module system (common in Node.js) */
+    "esModuleInterop": true,                            /* Allows interoperability with ES modules */
+    "forceConsistentCasingInFileNames": true,           /* Ensures consistent casing of file names */
+    "strict": true,                                     /* Enables all strict type-checking options */
+    "skipLibCheck": true,                               /* Skips type checking of .d.ts files */
+    "outDir": "./dist",                                 /* Output directory for compiled files */
+    "types": ["jest"],                                  /* Includes Jest types for testing */
+    "moduleResolution": "node",                         /* Uses Node.js module resolution strategy */
+    "resolveJsonModule": true,                          /* Allows importing JSON files */
+    "baseUrl": "./"                                     /* Base directory for module resolution */
   },
   "include": [
-    "src/**/*.ts", "src/config.ts",                  // Include all .ts files in the src directory
+    "src/**/*.ts",                                      /* Includes all .ts files inside src */
+    "tests/**/*.ts"                                     /* Includes all .ts files inside tests */
   ],
   "exclude": [
-    "node_modules",
-    "dist"                            // Exclude the dist directory to avoid compiling already compiled files
+    "node_modules",                                     /* Excludes the node_modules directory */
+    "dist"                                              /* Excludes the dist directory */
   ]
 }
