--- a/server/src/apps/posts/dependency-injection/application__dev.yaml
+++ b/server/src/apps/posts/dependency-injection/application__dev.yaml
@@ -21,6 +21,22 @@ services:
     class: ../controllers/CreatePostPostCtrl
     arguments: ["@Contexts.shared.infrastructure.CommandBus"]
 
+  #### GET posts by:
+  Contexts.posts.application.findByCriteria.PostsByCriteriaSearcher:
+    class: ../../../contexts/Posts/Posts/application/find/PostsByCriteriaSearcher
+    arguments: ["@Contexts.posts.domain.PostsRepository"]
+
+  Contexts.posts.application.findByCriteria.SearchPostsByCriteriaQueryHandler:
+    class: ../../../contexts/Posts/Posts/application/find/SearchPostsByCriteriaQueryHandler
+    arguments:
+      ["@Contexts.posts.application.findByCriteria.PostsByCriteriaSearcher"]
+    tags:
+      - { name: queryHandler }
+
+  Apps.posts.controllers.PostsGetCtrl:
+    class: ../controllers/PostsGetCtrl
+    arguments: ["@Contexts.shared.infrastructure.QueryBus"]
+
   ## Increment amount of posts use case:
   Contexts.Posts/PostsCounter.application.increment.IncrementPostsCounterOnPostCreated:
     class: ../../../contexts/Posts/PostsCounter/application/increment/IncrementPostsCounterOnPostCreated
@@ -46,10 +62,14 @@ services:
     arguments: ["!tagged domainEventSubscriber"]
 
   #### CommandBus:
-
   Contexts.shared.infrastructure.CommandBus:
     class: ../../../contexts/shared/infrastructure/CommandBus/InMemoryCommandBus
     arguments: ["!tagged commandHandler"]
+
+  #### QueryBus:
+  Contexts.shared.infrastructure.QueryBus:
+    class: ../../../contexts/shared/infrastructure/QueryBus/InMemoryQueryBus
+    arguments: ["!tagged queryHandler"]
 
   #### EventBus:
 
